--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,9 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.7.0",
     "sqlite3": "^5.1.6"
